[package]
name = "tracer"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Vitali Lovich <vlovich@google.com>", "Brian Merchant <bhmerchant@gmail.com>"]
categories = ["development-tools::profiling"]
repository = "https://github.com/bzm3r/tracer"
description = "Understanding xi-trace by rebuilding it."
edition = '2018'

[dependencies]
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"